<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/layoutData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_confirm"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="@dimen/default_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/order_medication_name"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/default_margin"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMedicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Medication 1"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/order_meditacion_type"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/default_margin"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMedicationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Type 1"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/order_meditacion_amount"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/default_margin"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMedicationAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="AMount 1"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/order_meditacion_distributor"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/default_margin"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMedicationDistributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Distributor 1"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/order_meditacion_branch"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingTop="@dimen/default_margin"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMedicationBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Branch 1"
            android:paddingLeft="@dimen/default_margin"
            android:paddingRight="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_margin="@dimen/default_margin"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>